@@ -1,3 +1,7 @@
+Apr 23, 2007
+
+  * FIXED: tcp_accept to deal with stream handles (broken in nbio redesign).
+
 Mar 7, 2007
 
   * FIXED: Put debug message "shutdown(6=-1, SD_RECEIVE) failed" under
